--- a/chrome_plugin/manifest.json
+++ b/chrome_plugin/manifest.json
@@ -2,9 +2,13 @@
 "manifest_version": 2,
     "background" : { "scripts": ["background.js"] },
     "description": "A Plugin For Quickly Creating Cookie Cutters from Web Images",
+	"icons": {
+            "32": "icon32.png"
+        },
+		
    "minimum_chrome_version": "6",
    "name": "Cookie Cutter Monster",
    "permissions": [ "contextMenus", "tabs", "http://*/*",
  "https://*/*" ],
-   "version": "1.0"
+   "version": "0.1"
 }
