--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "serve": "es-dev-server --app-index cookie.html --node-resolve --watch --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,11 @@
   },
   "homepage": "https://github.com/SchreiverJ/CookieCutterMonster#readme",
   "dependencies": {
-    "lit-element": "^2.3.1"
+    "@rollup/plugin-replace": "^2.3.3",
+    "lit-element": "^2.3.1",
+    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.0"
   },
   "devDependencies": {
     "es-dev-server": "^1.52.0"
