--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "preserve": "npm run build",
-    "serve": "es-dev-server --app-index cookie.html --node-resolve --watch --open",
+    "serve": "npx tsc -w & es-dev-server --app-index cookie.html --node-resolve --watch --open",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c rollup.config.js"
+    "build": "npx tsc --build --force"
   },
   "repository": {
     "type": "git",
@@ -18,13 +17,10 @@
   },
   "homepage": "https://github.com/SchreiverJ/CookieCutterMonster#readme",
   "dependencies": {
-    "@rollup/plugin-replace": "^2.3.3",
-    "lit-element": "^2.3.1",
-    "rollup-plugin-filesize": "^9.0.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "lit-element": "^2.3.1"
   },
   "devDependencies": {
-    "es-dev-server": "^1.52.0"
+    "es-dev-server": "^1.52.0",
+    "typescript": "^4.0.2"
   }
 }
