--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "serve": "npx tsc -w & es-dev-server --app-index cookie.html --node-resolve --watch --open",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc --build --force"
+    "predev": "mkdir -p build/lib && cp cookie.html build/ && cp js/opencv.js build/lib/",
+    "dev": "webpack --config webpack.config.cjs --watch & cd build && es-dev-server --app-index cookie.html --node-resolve --watch --open",
+    "start": "npm run dev",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,30 @@
   },
   "homepage": "https://github.com/SchreiverJ/CookieCutterMonster#readme",
   "dependencies": {
-    "lit-element": "^2.3.1"
+    "@material/icon-button": "^7.0.0",
+    "@material/mwc-button": "^0.18.0",
+    "@material/mwc-checkbox": "^0.18.0",
+    "@material/mwc-drawer": "^0.18.0",
+    "@material/mwc-icon-button": "^0.18.0",
+    "@material/mwc-list": "^0.18.0",
+    "@material/mwc-select": "^0.18.0",
+    "@material/mwc-slider": "^0.18.0",
+    "@material/mwc-tab-bar": "^0.18.0",
+    "@material/mwc-top-app-bar": "^0.18.0",
+    "lit-element": "^2.3.1",
+    "three": "^0.120.1",
+    "three-orbitcontrols": "^2.110.3"
   },
   "devDependencies": {
-    "es-dev-server": "^1.52.0",
-    "typescript": "^4.0.2"
+    "css-loader": "^4.2.2",
+    "es-dev-server": "^1.57.4",
+    "jest": "^26.4.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
